# grnd_filter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: clouds_info.txt
include/: arvc_axes3d.hpp  arvc_color.hpp  arvc_console.hpp  arvc_metrics.hpp  arvc_plane.hpp  arvc_utils.hpp  arvc_utils_v2.hpp  arvc_viewer.hpp
scripts/: setup.sh
src/: ground_segmentation_and_filtering.cpp  rrss_grnd_filter.cpp  run1  run2
